--- a/chekov.css
+++ b/chekov.css
@@ -8,6 +8,7 @@
     font-size: 14px;
     color: black;
     background-color: beige;
+    transition: background-color 0.3s, color 0.3s;
 }
 .direction:hover{
     background-color: aquamarine;
