--- a/chekov.css
+++ b/chekov.css
@@ -24,7 +24,7 @@
 }
 <style>
 tr:nth.child(even){
-    background-color: #62c7a2;
+    background-color: aquamarine;
 }
 tr{
     display: table-row;
