--- a/chekov.css
+++ b/chekov.css
@@ -46,3 +46,7 @@ table {
 tr:nth-child(even) {
     background-color: #dddddd;}
 </style>
+.SHIPUCHIN:hover {
+    text-shadow: 2px 2px 4px rgba(255, 0, 0, 0.5);
+    border: 2px solid blue;
+}
